# tk-http

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  README.rst  appveyor.yml  index.html  search-index.js  vagga.yaml
examples/: chunked.rs  counter.rs  generate_on_the_fly.rs  hello_world.rs  hello_world2.rs  native_tls_client.rs  sendfile.rs  tls_client.rs  websocket2.rs  websockets.rs  ws.html  ws.js  ws_cli.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/futures/future/: trait.Future.js
implementors/futures/sink/: trait.Sink.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Write.js
implementors/tk_bufstream/frame/: trait.Decode.js  trait.Encode.js
implementors/tk_http/client/: trait.Client.js
implementors/tk_sendfile/: trait.Destination.js
implementors/tokio_io/: trait.AsyncWrite.js
src/: base_serializer.rs  body_parser.rs  chunked.rs  client.rs  error.rs  headers.rs  lambda.rs  lib.rs  opt_future.rs  request.rs  response.rs  server.rs  simple_error_page.rs  version.rs
src/client/: buffered.rs  client.rs  config.rs  connect.rs  encoder.rs  errors.rs  head.rs  mod.rs  parser.rs  proto.rs  recv_mode.rs  simple.rs
src/enums/: headers.rs  mod.rs  status.rs  version.rs
src/serve/: config.rs  mod.rs  response_writer.rs  serializer.rs
src/server/: buffered.rs  codec.rs  config.rs  encoder.rs  error.rs  headers.rs  lambda.rs  mod.rs  mod.rs.orig  parser.rs  proto.rs  recv_mode.rs  request.rs  request_target.rs  serializer.rs  simple_error_page.rs  websocket.rs
src/tk_http/: base_serializer.rs.html  body_parser.rs.html  chunked.rs.html  headers.rs.html  lib.rs.html
src/tk_http/client/: buffered.rs.html  client.rs.html  config.rs.html  encoder.rs.html  errors.rs.html  head.rs.html  mod.rs.html  parser.rs.html  proto.rs.html  recv_mode.rs.html
src/tk_http/enums/: mod.rs.html  status.rs.html  version.rs.html
src/tk_http/server/: buffered.rs.html  codec.rs.html  config.rs.html  encoder.rs.html  error.rs.html  headers.rs.html  mod.rs.html  proto.rs.html  recv_mode.rs.html  request_target.rs.html  websocket.rs.html
src/tk_http/websocket/: alloc.rs.html  client.rs.html  codec.rs.html  config.rs.html  dispatcher.rs.html  error.rs.html  keys.rs.html  mod.rs.html  zero_copy.rs.html
src/websocket/: alloc.rs  client.rs  codec.rs  config.rs  dispatcher.rs  error.rs  keys.rs  mod.rs  zero_copy.rs
tests/: headers.rs  parser.rs  request.rs  server_simple.rs
tk_http/: enum.Status.html  enum.Version.html  index.html  sidebar-items.js
tk_http/client/: Head.t.html  index.html  sidebar-items.js  struct.Config.html  struct.Encoder.html  struct.EncoderDone.html  struct.Error.html  struct.Head.html  struct.Proto.html  struct.RecvMode.html  trait.Client.html  trait.Codec.html
tk_http/client/buffered/: index.html  sidebar-items.js  struct.Buffered.html  struct.Response.html
tk_http/client/client/: trait.Client.html  trait.Codec.html
tk_http/client/encoder/: struct.Encoder.html  (+1 more)
tk_http/server/: EncoderDone.t.html  Proto.t.html  RawBody.t.html  RecvMode.t.html  RequestTarget.t.html  WebsocketHandshake.t.html  enum.RequestTarget.html  index.html  sidebar-items.js  struct.Config.html  struct.Encoder.html  struct.EncoderDone.html  struct.Error.html  struct.FutureRawBody.html  struct.Head.html  struct.HeaderIter.html  struct.Proto.html  struct.RawBody.html  struct.RecvMode.html  struct.WebsocketHandshake.html  trait.Codec.html  trait.Dispatcher.html
tk_http/websocket/: ClientCodec.t.html  GUID.v.html  constant.GUID.html  enum.Frame.html  enum.Packet.html  index.html  sidebar-items.js  struct.Accept.html  struct.ClientCodec.html  struct.Config.html  struct.Error.html  struct.Key.html  struct.Loop.html  struct.ServerCodec.html  trait.Dispatcher.html
(+55 files in other folders)
