[package]
name = "tk-http"
version = "0.1.0"
description = """
    A full-features asynchronous HTTP implementation for tokio-rs stack,
    including websockets.
"""
authors = [
    "Alexey Popravka <alexey.popravka@horsedevel.com>",
    "Paul Colomiets <paul@colomiets.name>"]
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["http", "websockets", "tokio"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "web-programming::websocket",
    ]
homepage = "https://github.com/swindon-rs/tk-http/"
repository = "https://github.com/swindon-rs/tk-http/"
documentation = "https://swindon-rs.github.io/tk-http"

[dependencies]

futures = "0.1.7"
httparse = "1.1.2"
tokio-core = "0.1.0"
tk-bufstream = "0.2.4"
netbuf = "0.3.7"
quick-error = "1.1.0"
matches = "0.1.4"
log = "0.3.6"
url = "1.2.3"
sha1 = "0.2.0"
byteorder = "0.5.3"
rand = "0.3.15"

[features]
default = ["sendfile"]
sendfile = []

[dev-dependencies]
env_logger = "0.3.5"
argparse = "0.2.1"
futures-cpupool = "0.1.2"
time = "0.1.35"
tk-sendfile = "0.3.0"

rustls = "0.5.3"
tokio-rustls = "0.1.0"
