[package]
name = "tk-http"
version = "0.3.0"
description = """
    A full-features asynchronous HTTP implementation for tokio-rs stack,
    including websockets.
"""
authors = [
    "Alexey Popravka <alexey.popravka@horsedevel.com>",
    "Paul Colomiets <paul@colomiets.name>"]
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["http", "websockets", "tokio"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "web-programming::websocket",
    ]
homepage = "https://github.com/swindon-rs/tk-http/"
repository = "https://github.com/swindon-rs/tk-http/"
documentation = "https://docs.rs/tk-http"

[dependencies]

futures = "0.1.13"
httparse = "1.2.2"
tokio-core = "0.1.7"
tokio-io = "0.1.2"
tk-bufstream = "0.3.0"
netbuf = "0.4.0"
quick-error = "1.2.0"
matches = "0.1.4"
log = "0.3.8"
url = "1.4.0"
sha1 = "0.2.0"
byteorder = "1.0.0"
rand = "0.3.15"
tk-sendfile = { version="0.4.0", optional=true }

[features]
default = ["sendfile"]
sendfile = ["tk-sendfile"]

[dev-dependencies]
env_logger = "0.4.3"
argparse = "0.2.1"
futures-cpupool = "0.1.5"
time = "0.1.37"
tk-listen = "0.1.0"

rustls = "0.9.0"
tokio-rustls = "0.2.1"

native-tls = "0.1"
tokio-tls = "0.1"
